--- a/index.html
+++ b/index.html
@@ -57,53 +57,58 @@
     </center>
     <br> <br> <br>
     <center><div class="TablaEncuestas">
-        <table style="border-style: dotted">
-            <thead>
-                <tr>
-                    <th>Company</th>
-                    <th>Contact</th>
-                    <th>Country</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Alfreds Futterkiste</td>
-                    <td>Maria Anders</td>
-                    <td>Germany</td>
-                  </tr>
-                  <tr>
-                    <td>Centro comercial Moctezuma</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
-                  </tr>
-                  <tr>
-                    <td>Ernst Handel</td>
-                    <td>Roland Mendel</td>
-                    <td>Austria</td>
-                  </tr>
-                  <tr>
-                    <td>Island Trading</td>
-                    <td>Helen Bennett</td>
-                    <td>UK</td>
-                  </tr>
-                  <tr>
-                    <td>Laughing Bacchus Winecellars</td>
-                    <td>Yoshi Tannamuri</td>
-                    <td>Canada</td>
-                  </tr>
-                  <tr>
-                    <td>Magazzini Alimentari Riuniti</td>
-                    <td>Giovanni Rovelli</td>
-                    <td>Italy</td>
-                  </tr>
-            </tbody>
-            <tfoot>
-                <td></td>
-                <td>Total</td>
-                <td><b>50</b></td>
-            </tfoot>
-          </table><br>
-
+            <h2>
+                <a href="https://es.wikipedia.org/wiki/Anexo:Sondeos_de_las_elecciones_presidenciales_de_Costa_Rica_de_2022">Encuesta</a>
+                
+            </h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Bandera</th>
+                        <th>Candidato</th>
+                        <th>Encuesta 1</th>
+                        <th>Encuesta 2</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <img class="candidatos" src="../Imagenes/" alt="PSD">
+                        </td>
+                        <td>
+                            Rodrigo Chaves
+                        </td>
+                        <td>1%</td>
+                        <td>
+                            5%
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img class="candidatos" src="./img/PLN.svg" alt="PLN">
+                        </td>
+                        <td>Figueres</td>
+                        <td>14%</td>
+                        <td>17%</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img class="candidatos" src="./img/PNR.png" alt="PNR">
+                        </td>
+                        <td>Fabricio Alvarado</td>
+                        <td>13%</td>
+                        <td>20%</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img class="candidatos" src="./img/PUSC-flag.PNG.webp" alt="PUSC">
+                        </td>
+                        <td>Lineth Saborío</td>
+                        <td>5%</td>
+                        <td>16%</td>
+                    </tr>
+                </tbody>
+            </table>
     </div>
     </center>
     <br> <br> <br>
