--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img class="candidatos" src="../Imagenes/" alt="PSD">
+                            <img class="candidatos" src="../Imagenes/SocialDemocratico.png" alt="PSD">
                         </td>
                         <td>
                             Rodrigo Chaves
@@ -85,7 +85,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="candidatos" src="./img/PLN.svg" alt="PLN">
+                            <img class="candidatos" src="./Imagenes/PLN.png" alt="PLN">
                         </td>
                         <td>Figueres</td>
                         <td>14%</td>
@@ -93,7 +93,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="candidatos" src="./img/PNR.png" alt="PNR">
+                            <img class="candidatos" src="./Imagenes/PNR.png" alt="PNR">
                         </td>
                         <td>Fabricio Alvarado</td>
                         <td>13%</td>
@@ -101,9 +101,9 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="candidatos" src="./img/PUSC-flag.PNG.webp" alt="PUSC">
+                            <img class="candidatos" src="./Imagenes/PLP.png" alt="PLP">
                         </td>
-                        <td>Lineth Saborío</td>
+                        <td>Eliecer Feinzaig</td>
                         <td>5%</td>
                         <td>16%</td>
                     </tr>
