--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img class="candidatos" src="../Imagenes/SocialDemocratico.png" alt="PSD">
+                            <img class="Imgcandidatos" src="../Imagenes/SocialDemocratico.png" alt="PSD">
                         </td>
                         <td>
                             Rodrigo Chaves
@@ -85,7 +85,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="candidatos" src="./Imagenes/PLN.png" alt="PLN">
+                            <img class="Imgcandidatos" src="./Imagenes/PLN.png" alt="PLN">
                         </td>
                         <td>Figueres</td>
                         <td>14%</td>
@@ -93,7 +93,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="candidatos" src="./Imagenes/PNR.png" alt="PNR">
+                            <img class="Imgcandidatos" src="./Imagenes/PNR.png" alt="PNR">
                         </td>
                         <td>Fabricio Alvarado</td>
                         <td>13%</td>
@@ -101,24 +101,36 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="candidatos" src="./Imagenes/PLP.png" alt="PLP">
+                            <img class="Imgcandidatos" src="./Imagenes/PLP.png" alt="PLP">
                         </td>
                         <td>Eliecer Feinzaig</td>
-                        <td>5%</td>
-                        <td>16%</td>
+                        <td>1.7%</td>
+                        <td>1.8%</td>
                     </tr>
                 </tbody>
             </table>
     </div>
     </center>
     <br> <br> <br>
+    <center>
+        <div class="card" style="width: 18rem;">
+            <img src="./Imagenes/tse.png" class="card-img-top" alt="TSE">
+            <div class="card-body">
+              <h5 class="card-title">¿Conoces tu lugar de votación?</h5>
+              <a href="https://www.tse.go.cr/dondevotar/#" class="btn btn-primary" target="_blank">Ir</a>
+            </div>
+          </div>
+    </center>
+    
+      <br> <br>
+
     <div class="ListaOrdenada">
         <OL>
             <li><a href="presidentesPag/rodrigo.html" target="_self"> Pagina Rodrigo</a></li>
             <li><a href="presidentesPag/figueres.html" target="_self"> Pagina Figueres</a></li>
             <li><a href="presidentesPag/eliecer.html" target="_self"> Pagina Eliecer</a></li>
             <li><a href="presidentesPag/fabricio.html" target="_self"> Pagina Fabricio</a></li>
-
+            <li> <a href="./encuesta/encuesta.html">Encuestas</a></li>
         </OL>
 
     </div>
