--- a/encuesta/encuesta.html
+++ b/encuesta/encuesta.html
@@ -11,7 +11,7 @@
     <h1 id="titulo">Candidatos a la presidencia Costa Rica <br> Periodo 2022-2026 </h1>
     
 </header>
-<main>
+<body background="../Imagenes/band2.png">
     <center><div class="TablaEncuestas">
         <h2>
             <a href="https://es.wikipedia.org/wiki/Anexo:Sondeos_de_las_elecciones_presidenciales_de_Costa_Rica_de_2022">Encuesta</a>
@@ -41,7 +41,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img class="Imgcandidatos" src="./Imagenes/PLN.png" alt="PLN">
+                        <img class="Imgcandidatos" src="../Imagenes/PLN.png" alt="PLN">
                     </td>
                     <td>Figueres</td>
                     <td>14%</td>
@@ -49,7 +49,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img class="Imgcandidatos" src="./Imagenes/PNR.png" alt="PNR">
+                        <img class="Imgcandidatos" src="../Imagenes/PNR.png" alt="PNR">
                     </td>
                     <td>Fabricio Alvarado</td>
                     <td>13%</td>
@@ -57,7 +57,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img class="Imgcandidatos" src="./Imagenes/PLP.png" alt="PLP">
+                        <img class="Imgcandidatos" src="../Imagenes/PLP.png" alt="PLP">
                     </td>
                     <td>Eliecer Feinzaig</td>
                     <td>1.7%</td>
@@ -77,14 +77,15 @@
                 <a href="https://www.elmundo.cr/elecciones-2022/encuesta-idespo-chaves-444-y-figueres-325/" target="_blank">ciep</a>
             </li>
             <li>
-                <a href="./index.html">Volver a la página principal</a>
+                <a href="../index.html">Volver a la página principal</a>
             </li>
         </ul>
     </section>
-</main>
-    <footer>
-   
-    </footer>
-<body>
 </body>
+<center>
+    <footer>
+        Diseño Aplicaciones Web 2023 - Tarea 2 - Mario Vindas
+    </footer>
+</center>
+
 </html>
