--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="Imgcandidatos" src="./Imagenes/PLN.png" alt="PLN">
+                            <img class="Imgcandidatos" src="../Imagenes/PLN.png" alt="PLN">
                         </td>
                         <td>Figueres</td>
                         <td>14%</td>
@@ -93,7 +93,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="Imgcandidatos" src="./Imagenes/PNR.png" alt="PNR">
+                            <img class="Imgcandidatos" src="../Imagenes/PNR.png" alt="PNR">
                         </td>
                         <td>Fabricio Alvarado</td>
                         <td>13%</td>
@@ -101,7 +101,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="Imgcandidatos" src="./Imagenes/PLP.png" alt="PLP">
+                            <img class="Imgcandidatos" src="../Imagenes/PLP.png" alt="PLP">
                         </td>
                         <td>Eliecer Feinzaig</td>
                         <td>1.7%</td>
@@ -114,7 +114,7 @@
     <br> <br> <br>
     <center>
         <div class="card" style="width: 18rem;">
-            <img src="./Imagenes/tse.png" class="card-img-top" alt="TSE">
+            <img src="../Imagenes/tse.png" class="card-img-top" alt="TSE">
             <div class="card-body">
               <h5 class="card-title">¿Conoces tu lugar de votación?</h5>
               <a href="https://www.tse.go.cr/dondevotar/#" class="btn btn-primary" target="_blank">Ir</a>
@@ -136,7 +136,10 @@
     </div>
 </body>
 <br> <br> <br> <br> <br> <br> <br> 
-<footer>
-    Diseño Aplicaciones Web 2023 - Tarea 2 - Mario Vindas
-</footer>
+<center>
+    <footer>
+        Diseño Aplicaciones Web 2023 - Tarea 2 - Mario Vindas
+    </footer>
+</center>
+
 </html>
