--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img class="Imgcandidatos" src="../Imagenes/SocialDemocratico.png" alt="PSD">
+                            <img class="Imgcandidatos" src="Imagenes/SocialDemocratico.png" alt="PSD">
                         </td>
                         <td>
                             Rodrigo Chaves
@@ -85,7 +85,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="Imgcandidatos" src="../Imagenes/PLN.png" alt="PLN">
+                            <img class="Imgcandidatos" src="Imagenes/PLN.png" alt="PLN">
                         </td>
                         <td>Figueres</td>
                         <td>14%</td>
@@ -93,7 +93,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="Imgcandidatos" src="../Imagenes/PNR.png" alt="PNR">
+                            <img class="Imgcandidatos" src="Imagenes/PNR.png" alt="PNR">
                         </td>
                         <td>Fabricio Alvarado</td>
                         <td>13%</td>
@@ -101,7 +101,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img class="Imgcandidatos" src="../Imagenes/PLP.png" alt="PLP">
+                            <img class="Imgcandidatos" src="Imagenes/PLP.png" alt="PLP">
                         </td>
                         <td>Eliecer Feinzaig</td>
                         <td>1.7%</td>
