--- a/presidentesPag/eliecer.html
+++ b/presidentesPag/eliecer.html
@@ -54,7 +54,7 @@
     <br><br>
     <center>
         <div class="volverHome">
-            <center><a href="../home.html" target="_self"> Volver a Home</a></center>
+            <center><a href="../index.html" target="_self"> Volver a Home</a></center>
          
         </div>
     </center>
