--- a/presidentesPag/fabricio.html
+++ b/presidentesPag/fabricio.html
@@ -55,7 +55,7 @@
     <br><br>
     <center>
         <div class="volverHome">
-            <center><a href="../home.html" target="_self"> Volver a Home</a></center>
+            <center><a href="../index.html" target="_self"> Volver a Home</a></center>
          
         </div>
     </center>
