--- a/presidentesPag/rodrigo.html
+++ b/presidentesPag/rodrigo.html
@@ -53,7 +53,7 @@
     <br><br>
     <center>
         <div class="volverHome">
-            <center><a href="../home.html" target="_self"> Volver a Home</a></center>
+            <center><a href="../index.html" target="_self"> Volver a Home</a></center>
          
         </div>
     </center>
