--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <br> <br> <br>
     <center>
         <div class="card" style="width: 18rem;">
-            <img src="../Imagenes/tse.png" class="card-img-top" alt="TSE">
+            <img src="Imagenes/tse.png" class="card-img-top" alt="TSE">
             <div class="card-body">
               <h5 class="card-title">¿Conoces tu lugar de votación?</h5>
               <a href="https://www.tse.go.cr/dondevotar/#" class="btn btn-primary" target="_blank">Ir</a>
